# AutoRoboticArms

./: .gitignore  README.md
.github/workflows/: ci.yml
Cloud/: README.md  init_db.py  test_conductor.py  test_database.py
Cloud/OldCode/: docker-compose.yml
Cloud/OldCode/src/: serial_sanity_check.py
Cloud/src/: conductor_host.py  database_manager.py  models.py
Hardware/: File_Structure.txt  README.md
Hardware/.github/workflows/: ci.yml
Hardware/C++/: CMakeLists.txt  conductor_reciever.ino  conductor_reciever_scaled.ino  itworks.cpp
Hardware/C++/include/: ring_buffer.h
Hardware/C++/src/: main.cpp  ring_buffer.cpp
Hardware/C++/tests/: test_firmware_core.cpp
Hardware/OldCode/: conductor_host.py  conductor_test_armored.ino
Hardware/OldCode/Tests/: test_conductor_host.py
Hardware/Python/: Test_conductor_host.py  conductor_host.py  inverse_kinematics.py  pytest.ini  requirements.txt
Hardware/Python/Tests/: test_conductor_host.py
Hardware/Python/src/: conductor_host.py  database_manager.py  models.py
Hardware/Python/tests/: test_conductor_host.py  test_inverse_kinematics.py
Hardware/firmware/include/: avr.stub.h  circular_buffer.h  packet_parser.h  twi_driver.h  watchdog_interlock.h
Hardware/firmware/src/: circular_buffer.cpp  joint_actuator.cpp  main.cpp  packet_parser.cpp  starter_kit_test.cpp  twi_driver.cpp  watchdog_interlock.cpp
Hardware/firmware/tests/: test_circular_buffer.cpp  test_firmware_core.cpp  test_packet_parser.cpp  test_twi_driver.cpp  test_watchdog_interlock.cpp
Hardware/host_app/: pytest.ini
Hardware/host_app/src/: conductor_host.py
Hardware/host_app/tests/: conftest.py  test_conductor_host.py  test_database_integrity.py  test_inverse_kinematics.py
Network/Docker/: Dockerfile
Network/OldCode/: requirements.txt
Python/: conductor_host.py
Software/: README.md
Software/edge-orchestrator/: orchestrator_node.py
Software/edge-orchestrator/tests/: test_orchestrator_node.py
